# local_whisper

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION.md  PRD.md  README.md  README_de.md  install.bat  pyproject.toml  run.bat
docs/: architecture.md  configuration.md  deployment.md
scripts/: create_shortcut.ps1  diagnose.py
src/: __init__.py  config.py  controller.py  download_model.py  injector.py  main.py  overlay.py  recorder.py  transcriber.py
tests/: test_injector.py  test_recorder.py  test_transcriber.py
